--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "webquraninn",
   "version": "0.0.0",
   "scripts": {
+    "dev": "nodemon server.js",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
@@ -21,9 +22,11 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "body-parser": "^1.19.1",
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
     "jquery": "^3.6.0",
+    "nodemailer": "^6.7.2",
     "path": "^0.12.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -42,10 +45,24 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "nodemon": "^2.0.15",
     "typescript": "~4.5.2"
   },
   "engines": {
     "node": "16.13.1",
     "npm": "8.1.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.1.2.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AdamBinAamir/quraninn.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AdamBinAamir/quraninn/issues"
+  },
+  "homepage": "https://github.com/AdamBinAamir/quraninn#readme"
 }
